Added DuplicateIdException and checks to check duplicate email