@@ -1,6 +1,7 @@
 package com.conduit.exception;
 
 
+import com.conduit.openapi.model.GenericErrorModel;
 import io.jsonwebtoken.JwtException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -8,19 +9,22 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler({JwtException.class, UsernameNotFoundException.class})
-    public ResponseEntity<Map<String, Object>> handleAuthException() {
-        return getErrorResponse(HttpStatus.UNAUTHORIZED, "Unauthorized");
+    public ResponseEntity<GenericErrorModel> handleAuthException() {
+        GenericErrorModel error = new GenericErrorModel(Map.of("body", List.of("Unauthroized")));
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error);
     }
 
-    private ResponseEntity<Map<String, Object>> getErrorResponse(HttpStatus status, String message) {
-        Map<String, Object> body = Map.of("errors", Map.of("body", Collections.singletonList(message)));
-        return ResponseEntity.status(status).body(body);
+    @ExceptionHandler(DuplicateIdException.class)
+    public ResponseEntity<GenericErrorModel> handleDuplicateIdException() {
+        GenericErrorModel error = new GenericErrorModel(Map.of("email", List.of("Duplicate email exists")));
+        return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
     }
+
 }
